--- a/src/maelstrom-platform-ui/package.json
+++ b/src/maelstrom-platform-ui/package.json
@@ -6,22 +6,55 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint-next": "next lint",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
+    "@syncfusion/ej2-layouts": "^24.1.41",
+    "@syncfusion/ej2-popups": "^24.2.5",
+    "@syncfusion/ej2-react-buttons": "^24.2.7",
+    "@syncfusion/ej2-react-calendars": "^24.2.5",
+    "@syncfusion/ej2-react-dropdowns": "^24.2.7",
+    "@syncfusion/ej2-react-grids": "^24.1.45",
+    "@syncfusion/ej2-react-inputs": "^24.2.7",
+    "@syncfusion/ej2-react-layouts": "^24.1.41",
+    "@syncfusion/ej2-react-navigations": "^24.2.4",
+    "@syncfusion/ej2-react-richtexteditor": "^24.1.46",
+    "@types/pg": "^8.11.0",
+    "bootstrap": "^5.3.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
