--- a/src/maelstrom-platform-ui/package.json
+++ b/src/maelstrom-platform-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.7",
+    "@sentry/nextjs": "^7.102.0",
     "@syncfusion/ej2-layouts": "^24.1.41",
     "@syncfusion/ej2-popups": "^24.2.5",
     "@syncfusion/ej2-react-buttons": "^24.2.7",
